--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-DB_PASSWORD=MyMovies2025*
-DB_NAME=movies-db
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
+DB_PASSWORD=xxx
+DB_NAME=xxx
+DB_HOST=xxx
+DB_PORT=xxx
+DB_USER=xxx
